[gd_scene load_steps=5 format=2]

[ext_resource path="res://ciało.png" type="Texture" id=1]
[ext_resource path="res://osie2.png" type="Texture" id=2]
[ext_resource path="res://bg.png" type="Texture" id=3]
[ext_resource path="res://wizualizacja.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ciało" type="Sprite" parent="."]
position = Vector2( 50, 850 )
scale = Vector2( 7, 7 )
z_index = 1
texture = ExtResource( 1 )

[node name="osie" type="Sprite" parent="."]
position = Vector2( 800, 450 )
texture = ExtResource( 2 )

[node name="inputv0" type="TextEdit" parent="."]
margin_left = 1224.59
margin_top = 451.169
margin_right = 1324.59
margin_bottom = 471.169
rect_scale = Vector2( 1.5, 1.5 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputalfa" type="TextEdit" parent="."]
margin_left = 1224.59
margin_top = 495.73
margin_right = 1324.59
margin_bottom = 515.73
rect_scale = Vector2( 1.5, 1.5 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputg" type="TextEdit" parent="."]
margin_left = 1224.59
margin_top = 558.73
margin_right = 1324.59
margin_bottom = 578.73
rect_scale = Vector2( 1.5, 1.5 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputdokladnosc" type="TextEdit" parent="."]
margin_left = 1281.04
margin_top = 661.641
margin_right = 1329.04
margin_bottom = 681.641
rect_scale = Vector2( 1.5, 1.5 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1157.98
margin_top = 705.195
margin_right = 1357.98
margin_bottom = 740.195
rect_scale = Vector2( 2, 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zasieg" type="Label" parent="."]
margin_left = 1274.1
margin_top = 49.5729
margin_right = 1322.1
margin_bottom = 63.5729
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="czascalkowity" type="Label" parent="."]
margin_left = 1274.1
margin_top = 79.5729
margin_right = 1322.1
margin_bottom = 93.5729
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tnajwyzszego" type="Label" parent="."]
margin_left = 1274.1
margin_top = 109.573
margin_right = 1322.1
margin_bottom = 123.573
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="czas" type="Label" parent="."]
margin_left = 529.966
margin_top = 32.9192
margin_right = 577.966
margin_bottom = 46.9192
rect_scale = Vector2( 3, 3 )
text = "t = 0s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="curX" type="Label" parent="."]
margin_left = 531.132
margin_top = 93.5696
margin_right = 579.132
margin_bottom = 107.57
rect_scale = Vector2( 3, 3 )
text = "x = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="curY" type="Label" parent="."]
margin_left = 532.299
margin_top = 149.555
margin_right = 580.299
margin_bottom = 163.555
rect_scale = Vector2( 3, 3 )
text = "y = 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punktnajwyzszego" type="Label" parent="."]
margin_left = 1274.0
margin_top = 140.0
margin_right = 1420.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punktnajwyzszego2" type="Label" parent="."]
margin_left = 1274.0
margin_top = 140.0
margin_right = 1557.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punktkoncowego" type="Label" parent="."]
margin_left = 1274.0
margin_top = 140.0
margin_right = 1559.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="y" type="Label" parent="."]
margin_left = 98.4286
margin_top = 19.6469
margin_right = 166.429
margin_bottom = 33.6469
rect_scale = Vector2( 2, 2 )
text = "(m*10^n, n nalezy do N)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="."]
margin_left = 1151.7
margin_top = 853.216
margin_right = 1219.7
margin_bottom = 867.216
rect_scale = Vector2( 2, 2 )
text = "(m*10^n, n nalezy do N)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 800.814, 450 )
z_index = -1
texture = ExtResource( 3 )

[node name="hmax" type="Sprite" parent="."]
visible = false
modulate = Color( 0.176471, 0.294118, 0.541176, 1 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="koniec" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
